--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-
     "start": "node app.js"
   },
   "keywords": [],
@@ -20,6 +19,7 @@
     "express-group-routes": "^1.1.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.2",
+    "uuid": "^9.0.1",
     "yup": "^1.3.3"
   }
 }
